--- a/Week+3+assignment.ipynb
+++ b/Week+3+assignment.ipynb
@@ -230,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -447,132 +449,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4.9, 3.0, 1.4, 0.2, 'Iris-setosa', 4.7, 3.2, 1.3, 0.2,\n",
-       "        'Iris-setosa', 4.6, 3.1, 1.5, 0.2, 'Iris-setosa', 5.0, 3.6, 1.4,\n",
-       "        0.2, 'Iris-setosa', 5.4, 3.9, 1.7, 0.4, 'Iris-setosa', 4.6, 3.4,\n",
-       "        1.4, 0.3, 'Iris-setosa', 5.0, 3.4, 1.5, 0.2, 'Iris-setosa', 4.4,\n",
-       "        2.9, 1.4, 0.2, 'Iris-setosa', 4.9, 3.1, 1.5, 0.1, 'Iris-setosa',\n",
-       "        5.4, 3.7, 1.5, 0.2, 'Iris-setosa', 4.8, 3.4, 1.6, 0.2,\n",
-       "        'Iris-setosa', 4.8, 3.0, 1.4, 0.1, 'Iris-setosa', 4.3, 3.0, 1.1,\n",
-       "        0.1, 'Iris-setosa', 5.8, 4.0, 1.2, 0.2, 'Iris-setosa', 5.7, 4.4,\n",
-       "        1.5, 0.4, 'Iris-setosa', 5.4, 3.9, 1.3, 0.4, 'Iris-setosa', 5.1,\n",
-       "        3.5, 1.4, 0.3, 'Iris-setosa', 5.7, 3.8, 1.7, 0.3, 'Iris-setosa',\n",
-       "        5.1, 3.8, 1.5, 0.3, 'Iris-setosa', 5.4, 3.4, 1.7, 0.2,\n",
-       "        'Iris-setosa', 5.1, 3.7, 1.5, 0.4, 'Iris-setosa', 4.6, 3.6, 1.0,\n",
-       "        0.2, 'Iris-setosa', 5.1, 3.3, 1.7, 0.5, 'Iris-setosa', 4.8, 3.4,\n",
-       "        1.9, 0.2, 'Iris-setosa', 5.0, 3.0, 1.6, 0.2, 'Iris-setosa', 5.0,\n",
-       "        3.4, 1.6, 0.4, 'Iris-setosa', 5.2, 3.5, 1.5, 0.2, 'Iris-setosa',\n",
-       "        5.2, 3.4, 1.4, 0.2, 'Iris-setosa', 4.7, 3.2, 1.6, 0.2,\n",
-       "        'Iris-setosa', 4.8, 3.1, 1.6, 0.2, 'Iris-setosa', 5.4, 3.4, 1.5,\n",
-       "        0.4, 'Iris-setosa', 5.2, 4.1, 1.5, 0.1, 'Iris-setosa', 5.5, 4.2,\n",
-       "        1.4, 0.2, 'Iris-setosa', 4.9, 3.1, 1.5, 0.1, 'Iris-setosa', 5.0,\n",
-       "        3.2, 1.2, 0.2, 'Iris-setosa', 5.5, 3.5, 1.3, 0.2, 'Iris-setosa',\n",
-       "        4.9, 3.1, 1.5, 0.1, 'Iris-setosa', 4.4, 3.0, 1.3, 0.2,\n",
-       "        'Iris-setosa', 5.1, 3.4, 1.5, 0.2, 'Iris-setosa', 5.0, 3.5, 1.3,\n",
-       "        0.3, 'Iris-setosa', 4.5, 2.3, 1.3, 0.3, 'Iris-setosa', 4.4, 3.2,\n",
-       "        1.3, 0.2, 'Iris-setosa', 5.0, 3.5, 1.6, 0.6, 'Iris-setosa', 5.1,\n",
-       "        3.8, 1.9, 0.4, 'Iris-setosa', 4.8, 3.0, 1.4, 0.3, 'Iris-setosa',\n",
-       "        5.1, 3.8, 1.6, 0.2, 'Iris-setosa', 4.6, 3.2, 1.4, 0.2,\n",
-       "        'Iris-setosa', 5.3, 3.7, 1.5, 0.2, 'Iris-setosa', 5.0, 3.3, 1.4,\n",
-       "        0.2, 'Iris-setosa', 7.0, 3.2, 4.7, 1.4, 'Iris-versicolor', 6.4,\n",
-       "        3.2, 4.5, 1.5, 'Iris-versicolor', 6.9, 3.1, 4.9, 1.5,\n",
-       "        'Iris-versicolor', 5.5, 2.3, 4.0, 1.3, 'Iris-versicolor', 6.5, 2.8,\n",
-       "        4.6, 1.5, 'Iris-versicolor', 5.7, 2.8, 4.5, 1.3, 'Iris-versicolor',\n",
-       "        6.3, 3.3, 4.7, 1.6, 'Iris-versicolor', 4.9, 2.4, 3.3, 1.0,\n",
-       "        'Iris-versicolor', 6.6, 2.9, 4.6, 1.3, 'Iris-versicolor', 5.2, 2.7,\n",
-       "        3.9, 1.4, 'Iris-versicolor', 5.0, 2.0, 3.5, 1.0, 'Iris-versicolor',\n",
-       "        5.9, 3.0, 4.2, 1.5, 'Iris-versicolor', 6.0, 2.2, 4.0, 1.0,\n",
-       "        'Iris-versicolor', 6.1, 2.9, 4.7, 1.4, 'Iris-versicolor', 5.6, 2.9,\n",
-       "        3.6, 1.3, 'Iris-versicolor', 6.7, 3.1, 4.4, 1.4, 'Iris-versicolor',\n",
-       "        5.6, 3.0, 4.5, 1.5, 'Iris-versicolor', 5.8, 2.7, 4.1, 1.0,\n",
-       "        'Iris-versicolor', 6.2, 2.2, 4.5, 1.5, 'Iris-versicolor', 5.6, 2.5,\n",
-       "        3.9, 1.1, 'Iris-versicolor', 5.9, 3.2, 4.8, 1.8, 'Iris-versicolor',\n",
-       "        6.1, 2.8, 4.0, 1.3, 'Iris-versicolor', 6.3, 2.5, 4.9, 1.5,\n",
-       "        'Iris-versicolor', 6.1, 2.8, 4.7, 1.2, 'Iris-versicolor', 6.4, 2.9,\n",
-       "        4.3, 1.3, 'Iris-versicolor', 6.6, 3.0, 4.4, 1.4, 'Iris-versicolor',\n",
-       "        6.8, 2.8, 4.8, 1.4, 'Iris-versicolor', 6.7, 3.0, 5.0, 1.7,\n",
-       "        'Iris-versicolor', 6.0, 2.9, 4.5, 1.5, 'Iris-versicolor', 5.7, 2.6,\n",
-       "        3.5, 1.0, 'Iris-versicolor', 5.5, 2.4, 3.8, 1.1, 'Iris-versicolor',\n",
-       "        5.5, 2.4, 3.7, 1.0, 'Iris-versicolor', 5.8, 2.7, 3.9, 1.2,\n",
-       "        'Iris-versicolor', 6.0, 2.7, 5.1, 1.6, 'Iris-versicolor', 5.4, 3.0,\n",
-       "        4.5, 1.5, 'Iris-versicolor', 6.0, 3.4, 4.5, 1.6, 'Iris-versicolor',\n",
-       "        6.7, 3.1, 4.7, 1.5, 'Iris-versicolor', 6.3, 2.3, 4.4, 1.3,\n",
-       "        'Iris-versicolor', 5.6, 3.0, 4.1, 1.3, 'Iris-versicolor', 5.5, 2.5,\n",
-       "        4.0, 1.3, 'Iris-versicolor', 5.5, 2.6, 4.4, 1.2, 'Iris-versicolor',\n",
-       "        6.1, 3.0, 4.6, 1.4, 'Iris-versicolor', 5.8, 2.6, 4.0, 1.2,\n",
-       "        'Iris-versicolor', 5.0, 2.3, 3.3, 1.0, 'Iris-versicolor', 5.6, 2.7,\n",
-       "        4.2, 1.3, 'Iris-versicolor', 5.7, 3.0, 4.2, 1.2, 'Iris-versicolor',\n",
-       "        5.7, 2.9, 4.2, 1.3, 'Iris-versicolor', 6.2, 2.9, 4.3, 1.3,\n",
-       "        'Iris-versicolor', 5.1, 2.5, 3.0, 1.1, 'Iris-versicolor', 5.7, 2.8,\n",
-       "        4.1, 1.3, 'Iris-versicolor', 6.3, 3.3, 6.0, 2.5, 'Iris-virginica',\n",
-       "        5.8, 2.7, 5.1, 1.9, 'Iris-virginica', 7.1, 3.0, 5.9, 2.1,\n",
-       "        'Iris-virginica', 6.3, 2.9, 5.6, 1.8, 'Iris-virginica', 6.5, 3.0,\n",
-       "        5.8, 2.2, 'Iris-virginica', 7.6, 3.0, 6.6, 2.1, 'Iris-virginica',\n",
-       "        4.9, 2.5, 4.5, 1.7, 'Iris-virginica', 7.3, 2.9, 6.3, 1.8,\n",
-       "        'Iris-virginica', 6.7, 2.5, 5.8, 1.8, 'Iris-virginica', 7.2, 3.6,\n",
-       "        6.1, 2.5, 'Iris-virginica', 6.5, 3.2, 5.1, 2.0, 'Iris-virginica',\n",
-       "        6.4, 2.7, 5.3, 1.9, 'Iris-virginica', 6.8, 3.0, 5.5, 2.1,\n",
-       "        'Iris-virginica', 5.7, 2.5, 5.0, 2.0, 'Iris-virginica', 5.8, 2.8,\n",
-       "        5.1, 2.4, 'Iris-virginica', 6.4, 3.2, 5.3, 2.3, 'Iris-virginica',\n",
-       "        6.5, 3.0, 5.5, 1.8, 'Iris-virginica', 7.7, 3.8, 6.7, 2.2,\n",
-       "        'Iris-virginica', 7.7, 2.6, 6.9, 2.3, 'Iris-virginica', 6.0, 2.2,\n",
-       "        5.0, 1.5, 'Iris-virginica', 6.9, 3.2, 5.7, 2.3, 'Iris-virginica',\n",
-       "        5.6, 2.8, 4.9, 2.0, 'Iris-virginica', 7.7, 2.8, 6.7, 2.0,\n",
-       "        'Iris-virginica', 6.3, 2.7, 4.9, 1.8, 'Iris-virginica', 6.7, 3.3,\n",
-       "        5.7, 2.1, 'Iris-virginica', 7.2, 3.2, 6.0, 1.8, 'Iris-virginica',\n",
-       "        6.2, 2.8, 4.8, 1.8, 'Iris-virginica', 6.1, 3.0, 4.9, 1.8,\n",
-       "        'Iris-virginica', 6.4, 2.8, 5.6, 2.1, 'Iris-virginica', 7.2, 3.0,\n",
-       "        5.8, 1.6, 'Iris-virginica', 7.4, 2.8, 6.1, 1.9, 'Iris-virginica',\n",
-       "        7.9, 3.8, 6.4, 2.0, 'Iris-virginica', 6.4, 2.8, 5.6, 2.2,\n",
-       "        'Iris-virginica', 6.3, 2.8, 5.1, 1.5, 'Iris-virginica', 6.1, 2.6,\n",
-       "        5.6, 1.4, 'Iris-virginica', 7.7, 3.0, 6.1, 2.3, 'Iris-virginica',\n",
-       "        6.3, 3.4, 5.6, 2.4, 'Iris-virginica', 6.4, 3.1, 5.5, 1.8,\n",
-       "        'Iris-virginica', 6.0, 3.0, 4.8, 1.8, 'Iris-virginica', 6.9, 3.1,\n",
-       "        5.4, 2.1, 'Iris-virginica', 6.7, 3.1, 5.6, 2.4, 'Iris-virginica',\n",
-       "        6.9, 3.1, 5.1, 2.3, 'Iris-virginica', 5.8, 2.7, 5.1, 1.9,\n",
-       "        'Iris-virginica', 6.8, 3.2, 5.9, 2.3, 'Iris-virginica', 6.7, 3.3,\n",
-       "        5.7, 2.5, 'Iris-virginica', 6.7, 3.0, 5.2, 2.3, 'Iris-virginica',\n",
-       "        6.3, 2.5, 5.0, 1.9, 'Iris-virginica', 6.5, 3.0, 5.2, 2.0,\n",
-       "        'Iris-virginica', 6.2, 3.4, 5.4, 2.3, 'Iris-virginica', 5.9, 3.0,\n",
-       "        5.1, 1.8, 'Iris-virginica']], dtype=object)"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "iris1 =np.array(iris)\n",
-    "iris1.reshape(1,745)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "745"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "149*5"
+    "\n"
    ]
   },
   {
